Update templates for Project mota 3

--- a/templates/add.html
+++ b/templates/add.html
@@ -7,25 +7,22 @@
 {% block main %}
     <center>
         <h3><em>Add New Family Members</em></h3>
-        <input type="radio" id="imperial" name="units" value="imperial"><label for="imperial">Imperial</label>
-        <input type="radio" id="metric" name="units" value="metric" checked><label for="metric">Metric</label>
 
-        <form id="addM" action="/add" method="post">
+        <form id="add" action="/add" method="post">
             <div>Name: <input autofocus autocomplete="off" type="text" name="Name" id="Name" placeholder="Member's Name"><br><br></div>
-            <div>Height: <input autocomplete="off" type="number" name="cms" id="cms" placeholder="Centimeters" min=1><br><br></div>
-            <div>Weight: <input autocomplete="off" type="number" name="kgs" id="kgs" placeholder="Kilograms" min=1><br><br></div>
-        	<button type="submit" name="addMe">Update</button>
+            <div>
+                Email ID: <input autocomplete="off" type="email" name="email" placeholder="Enter email ID">
+            </div><br>
+            <div>
+                Password: <input autocomplete="off" type="password" name="password" placeholder="Enter Password">
+            </div><br>
+            <div>
+                Confirm Password: <input autocomplete="off" type="password" name="confirm-pwd" placeholder="Re-enter Password">
+            </div><br>
+        	<button type="submit" name="add">Update</button>
         	<button type="reset">Clear</button>
         </form>
 
-        <form id="addI" action="/add" method="post">
-            <div>Name: <input autofocus autocomplete="off" type="text" name="Name" id="Name" placeholder="Member's Name"><br><br></div>
-            <div>Height: <input autofocus autocomplete="off" type="number" name="feet" id="feet" placeholder="Feet" min=1>
-            <input autofocus autocomplete="off" type="number" name="inch" id="inch" placeholder="Inch" min=0><br><br></div>
-            <div>Weight: <input autocomplete="off" type="number" name="lbs" id="lbs" placeholder="Pounds" min=1><br><br></div>
-        	<button type="submit" name="addIm">Update</button>
-        	<button type="reset">Clear</button>
-        </form>
     </center>
     <script>
         var units = document.getElementsByName("units");
