--- a/templates/remove.html
+++ b/templates/remove.html
@@ -12,7 +12,7 @@
             <select name="del-member">
                 <option value="" disabled="disabled" selected="true">Select Member</option>
             {% for member in members %}
-                <option value="{{ member["name"] }}">{{ member["name"].upper() }}</option>
+                <option value="{{ member["user_name"] }}">{{ member["user_name"].upper() }}</option>
             {% endfor %}
             </select><br><br>
         </div>
